services/operations/changedetection/manifests/share-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection-share
  namespace: operations
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`changedetection.starktastic.net`) && PathPrefix(`/share`)
      kind: Rule
      services:
        - name: changedetection
          port: 5000
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik-system
  tls:
    secretName: traefik-system/starktastic-net-tls
